# ResearchMishimaAutoMLZero

./: .gitignore  Makefile  README.md  execute.sh  exp.sh  pom.xml  pyproject.toml  setup.sh
experiments/affine_classification/default/: experiment.json
experiments/affine_classification/noisy_0.1/: experiment.json
experiments/affine_classification/noisy_0.2/: experiment.json
experiments/affine_regression/default/: experiment.json
experiments/affine_regression/noisy_0.1/: experiment.json
experiments/affine_regression/noisy_0.2/: experiment.json
experiments/linear_classification/default/: experiment.json
experiments/linear_classification/noisy_0.1/: experiment.json
experiments/linear_classification/noisy_0.2/: experiment.json
experiments/linear_regression/default/: experiment.json
experiments/linear_regression/noisy_0.1/: experiment.json
experiments/linear_regression/noisy_0.2/: experiment.json
experiments/linear_regression/optima/: experiment.json
experiments/two_layers_nn_classification/default/: experiment.json
experiments/two_layers_nn_classification/noisy_0.1/: experiment.json
experiments/two_layers_nn_classification/noisy_0.2/: experiment.json
experiments/two_layers_nn_regression/default/: experiment.json
experiments/two_layers_nn_regression/noisy_0.2/: experiment.json
paper/: main.tex  ref.bib
paper/jpnsec/: evocomp.sty  flashtalk.pptx  main.tex  ref.bib
paper/master_degree/: image.pptx
paper/mgg_automl_zero_vag/ag/: affine.dot  after_learn.dot  before_learn.dot  (+7 more)
scripts/: progress_all_trials.py  progress_each_trial.py
(+199 files in other folders)
